CSS fix to stop the sidebar from being cut off

--- a/ASCOM.Alpaca.Simulators/wwwroot/css/site.css
+++ b/ASCOM.Alpaca.Simulators/wwwroot/css/site.css
@@ -225,7 +225,8 @@ fieldset {
 
     .sidebar {
         width: 250px;
-        height: 100vh;
+        height: 100%;
+        min-height: 100vh;
         position: sticky;
         top: 0;
     }
